--- a/preview/pr-1/components/index.html
+++ b/preview/pr-1/components/index.html
@@ -478,12 +478,6 @@
         </a>
       
     
-      
-        <a href="/history-of-insulin-project/preview/pr-1/contact/" data-tooltip="Email, address, and location">
-          Contact
-        </a>
-      
-    
   </nav>
 </header>
 
@@ -507,8 +501,179 @@
   <section class="background" data-size="page">
     <h1 id="individual-components">
 <i class="icon fa-solid fa-microscope"></i>Individual Components</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+<p>Detailed descriptions of the hardware specifications for each component, how we designed and built them, and things we learned along the way.</p>
+  </section>
+
+  
+  
+  
+
+  <section class="background" data-size="page">
+    <!--
+  <background></background>
+  <dark></dark>
+  <size></size>
+-->
+
+<div class="card" data-style="">
+  <a href="/history-of-insulin-project/preview/pr-1/components/flasks" aria-label="Mixing Flasks" class="card-image">
+    <img src="/history-of-insulin-project/preview/pr-1/images/photo.jpg" alt="Mixing Flasks" loading="lazy" onerror="this.src = '/history-of-insulin-project/preview/pr-1/images/fallback.svg'; this.onerror = null;">
+  </a>
+
+  <div class="card-text">
+    
+      <a href="/history-of-insulin-project/preview/pr-1/components/flasks" class="card-title">
+        Mixing Flasks
+    </a>
+    
+
+    
+      <span class="card-subtitle">a subtitle</span>
+    
+
+    
+      <p>
+        Lorem ipsum <em>dolor sit amet</em>, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+
+      </p>
+    
+
+    
+      
+
+
+  <div class="tags" data-link="/history-of-insulin-project/preview/pr-1/components/">
+    
+      <a href="/components/?search=%22tag:%20component%22" class="tag" data-tooltip='Show items with the tag "component"'>
+        component
+      </a>
+    
+  </div>
+
+
+    
+  </div>
+</div>
+
+<div class="card" data-style="">
+  <a href="/history-of-insulin-project/preview/pr-1/components/centrifuge" aria-label="Centrifuge" class="card-image">
+    <img src="/history-of-insulin-project/preview/pr-1/images/photo.jpg" alt="Centrifuge" loading="lazy" onerror="this.src = '/history-of-insulin-project/preview/pr-1/images/fallback.svg'; this.onerror = null;">
+  </a>
+
+  <div class="card-text">
+    
+      <a href="/history-of-insulin-project/preview/pr-1/components/centrifuge" class="card-title">
+        Centrifuge
+    </a>
+    
+
+    
+      <span class="card-subtitle">a subtitle</span>
+    
+
+    
+      <p>
+        Lorem ipsum <em>dolor sit amet</em>, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+
+      </p>
+    
+
+    
+      
+
+
+  <div class="tags" data-link="/history-of-insulin-project/preview/pr-1/components/">
+    
+      <a href="/components/?search=%22tag:%20component%22" class="tag" data-tooltip='Show items with the tag "component"'>
+        component
+      </a>
+    
+  </div>
+
+
+    
+  </div>
+</div>
+
+<div class="card" data-style="">
+  <a href="/history-of-insulin-project/preview/pr-1/components/syringe" aria-label="Syringe Layer Extraction" class="card-image">
+    <img src="/history-of-insulin-project/preview/pr-1/images/photo.jpg" alt="Syringe Layer Extraction" loading="lazy" onerror="this.src = '/history-of-insulin-project/preview/pr-1/images/fallback.svg'; this.onerror = null;">
+  </a>
+
+  <div class="card-text">
+    
+      <a href="/history-of-insulin-project/preview/pr-1/components/syringe" class="card-title">
+        Syringe &amp; Layer Extraction
+    </a>
+    
+
+    
+      <span class="card-subtitle">a subtitle</span>
+    
+
+    
+      <p>
+        Lorem ipsum <em>dolor sit amet</em>, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+
+      </p>
+    
+
+    
+      
+
+
+  <div class="tags" data-link="/history-of-insulin-project/preview/pr-1/components/">
+    
+      <a href="/components/?search=%22tag:%20component%22" class="tag" data-tooltip='Show items with the tag "component"'>
+        component
+      </a>
+    
+  </div>
+
+
+    
+  </div>
+</div>
+
+<div class="card" data-style="">
+  <a href="/history-of-insulin-project/preview/pr-1/components/dog" aria-label="Marjorie" class="card-image">
+    <img src="/history-of-insulin-project/preview/pr-1/images/photo.jpg" alt="Marjorie" loading="lazy" onerror="this.src = '/history-of-insulin-project/preview/pr-1/images/fallback.svg'; this.onerror = null;">
+  </a>
+
+  <div class="card-text">
+    
+      <a href="/history-of-insulin-project/preview/pr-1/components/dog" class="card-title">
+        Marjorie
+    </a>
+    
+
+    
+      <span class="card-subtitle">a subtitle</span>
+    
+
+    
+      <p>
+        Lorem ipsum <em>dolor sit amet</em>, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+
+      </p>
+    
+
+    
+      
+
+
+  <div class="tags" data-link="/history-of-insulin-project/preview/pr-1/components/">
+    
+      <a href="/components/?search=%22tag:%20component%22" class="tag" data-tooltip='Show items with the tag "component"'>
+        component
+      </a>
+    
+  </div>
+
+
+    
+  </div>
+</div>
 
 <!-- 
 
@@ -551,13 +716,19 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
 
 <div class="search-info"></div>
  -->
+<!--
   </section>
 
   
   
   
 
-  <section class="background" data-size="page">
+  <section
+    class="background"
+    data-size="page"
+    
+    
+  >
     <!--
   <background></background>
   <dark></dark>
@@ -785,85 +956,7 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
   </div>
 </div>
 
-<div class="card" data-style="">
-  <a href="/history-of-insulin-project/preview/pr-1/components/centrifuge" aria-label="Centrifuge" class="card-image">
-    <img src="/history-of-insulin-project/preview/pr-1/images/photo.jpg" alt="Centrifuge" loading="lazy" onerror="this.src = '/history-of-insulin-project/preview/pr-1/images/fallback.svg'; this.onerror = null;">
-  </a>
-
-  <div class="card-text">
-    
-      <a href="/history-of-insulin-project/preview/pr-1/components/centrifuge" class="card-title">
-        Centrifuge
-    </a>
-    
-
-    
-      <span class="card-subtitle">a subtitle</span>
-    
-
-    
-      <p>
-        Lorem ipsum <em>dolor sit amet</em>, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-
-      </p>
-    
-
-    
-      
-
-
-  <div class="tags" data-link="/history-of-insulin-project/preview/pr-1/components/">
-    
-      <a href="/components/?search=%22tag:%20component%22" class="tag" data-tooltip='Show items with the tag "component"'>
-        component
-      </a>
-    
-  </div>
-
-
-    
-  </div>
-</div>
-
-<div class="card" data-style="">
-  <a href="https://github.com/" aria-label="Cool Package" class="card-image">
-    <img src="/history-of-insulin-project/preview/pr-1/images/photo.jpg" alt="Cool Package" loading="lazy" onerror="this.src = '/history-of-insulin-project/preview/pr-1/images/fallback.svg'; this.onerror = null;">
-  </a>
-
-  <div class="card-text">
-    
-      <a href="https://github.com/" class="card-title">
-        Cool Package
-    </a>
-    
-
-    
-      <span class="card-subtitle">a subtitle</span>
-    
-
-    
-      <p>
-        Lorem ipsum <em>dolor sit amet</em>, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-
-      </p>
-    
-
-    
-      
-
-
-  <div class="tags" data-repo="greenelab/lab-website-template" data-link="/history-of-insulin-project/preview/pr-1/components/">
-    
-      <a href="/components/?search=%22tag:%20resource%22" class="tag" data-tooltip='Show items with the tag "resource"'>
-        resource
-      </a>
-    
-  </div>
-
-
-    
-  </div>
-</div>
+<p>–&gt;</p>
 
 <!--
   </section>
@@ -885,130 +978,6 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
 -->
 
 <h2 id="more">More</h2>
-
-<div class="card" data-style="small">
-  <a href="https://github.com/" aria-label="Cool Tutorial" class="card-image">
-    <img src="/history-of-insulin-project/preview/pr-1/images/photo.jpg" alt="Cool Tutorial" loading="lazy" onerror="this.src = '/history-of-insulin-project/preview/pr-1/images/fallback.svg'; this.onerror = null;">
-  </a>
-
-  <div class="card-text">
-    
-      <a href="https://github.com/" class="card-title">
-        Cool Tutorial
-    </a>
-    
-
-    
-      <span class="card-subtitle">a subtitle</span>
-    
-
-    
-      <p>
-        Lorem ipsum <em>dolor sit amet</em>, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-
-      </p>
-    
-
-    
-      
-
-
-  <div class="tags" data-repo="greenelab/lab-website-template" data-link="/history-of-insulin-project/preview/pr-1/components/">
-    
-      <a href="/components/?search=%22tag:%20resource%22" class="tag" data-tooltip='Show items with the tag "resource"'>
-        resource
-      </a>
-    
-      <a href="/components/?search=%22tag:%20publication%22" class="tag" data-tooltip='Show items with the tag "publication"'>
-        publication
-      </a>
-    
-  </div>
-
-
-    
-  </div>
-</div>
-
-<div class="card" data-style="small">
-  <a href="https://github.com/" aria-label="Cool Web App" class="card-image">
-    <img src="/history-of-insulin-project/preview/pr-1/images/photo.jpg" alt="Cool Web App" loading="lazy" onerror="this.src = '/history-of-insulin-project/preview/pr-1/images/fallback.svg'; this.onerror = null;">
-  </a>
-
-  <div class="card-text">
-    
-      <a href="https://github.com/" class="card-title">
-        Cool Web App
-    </a>
-    
-
-    
-      <span class="card-subtitle">a subtitle</span>
-    
-
-    
-      <p>
-        Lorem ipsum <em>dolor sit amet</em>, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-
-      </p>
-    
-
-    
-      
-
-
-  <div class="tags" data-repo="greenelab/lab-website-template" data-link="/history-of-insulin-project/preview/pr-1/components/">
-    
-      <a href="/components/?search=%22tag:%20software%22" class="tag" data-tooltip='Show items with the tag "software"'>
-        software
-      </a>
-    
-  </div>
-
-
-    
-  </div>
-</div>
-
-<div class="card" data-style="small">
-  <a href="https://github.com/" aria-label="Cool Web Server" class="card-image">
-    <img src="/history-of-insulin-project/preview/pr-1/images/photo.jpg" alt="Cool Web Server" loading="lazy" onerror="this.src = '/history-of-insulin-project/preview/pr-1/images/fallback.svg'; this.onerror = null;">
-  </a>
-
-  <div class="card-text">
-    
-      <a href="https://github.com/" class="card-title">
-        Cool Web Server
-    </a>
-    
-
-    
-      <span class="card-subtitle">a subtitle</span>
-    
-
-    
-      <p>
-        Lorem ipsum <em>dolor sit amet</em>, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-
-      </p>
-    
-
-    
-      
-
-
-  <div class="tags" data-repo="greenelab/lab-website-template" data-link="/history-of-insulin-project/preview/pr-1/components/">
-    
-      <a href="/components/?search=%22tag:%20software%22" class="tag" data-tooltip='Show items with the tag "software"'>
-        software
-      </a>
-    
-  </div>
-
-
-    
-  </div>
-</div>
 
 <p>–&gt;</p>
   </section>
@@ -1049,68 +1018,8 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
 
 
   <div class="button-wrapper">
-    <a class="button" href="https://orcid.org/0000-0001-8713-9213" data-tooltip="ORCID" data-style="bare" aria-label="ORCID">
-      <i class="icon fa-brands fa-orcid"></i>
-      
-    </a>
-  </div>
-
-
-    
-      
-      
-      
-
-
-
-  <div class="button-wrapper">
-    <a class="button" href="https://scholar.google.com/citations?user=ETJoidYAAAAJ" data-tooltip="Google Scholar" data-style="bare" aria-label="Google Scholar">
-      <i class="icon fa-brands fa-google"></i>
-      
-    </a>
-  </div>
-
-
-    
-      
-      
-      
-
-
-
-  <div class="button-wrapper">
     <a class="button" href="https://github.com/miekoyao" data-tooltip="GitHub" data-style="bare" aria-label="GitHub">
       <i class="icon fa-brands fa-github"></i>
-      
-    </a>
-  </div>
-
-
-    
-      
-      
-      
-
-
-
-  <div class="button-wrapper">
-    <a class="button" href="https://twitter.com/miekoyao" data-tooltip="Twitter" data-style="bare" aria-label="Twitter">
-      <i class="icon fa-brands fa-twitter"></i>
-      
-    </a>
-  </div>
-
-
-    
-      
-      
-      
-
-
-
-  <div class="button-wrapper">
-    <a class="button" href="https://youtube.com/miekoyao" data-tooltip="YouTube" data-style="bare" aria-label="YouTube">
-      <i class="icon fa-brands fa-youtube"></i>
       
     </a>
   </div>
